--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@
 
 
 .link-row{
-    margin-left: 240px;
+    margin-left: 210px; i just reduced the link-row margin-left 
       font-weight: bold;
 }
 
@@ -116,3 +116,6 @@ color :#5D7092 ;
 color: #05A371;
 }
 
+.fimages{
+    margin-left: 50px;
+}
