add margins on fheadings

--- a/style.css
+++ b/style.css
@@ -121,12 +121,10 @@ color: #05A371;
 }
 
 .hmagic{
-    margin-left: 30px;
+    margin-right: 40px;
 }
 .fdescription{
     font-size: 10px;
     color :#5D7092 ;
 }
-.llinks{
-    margin: 20px;
-}
+
