--- a/style.css
+++ b/style.css
@@ -129,5 +129,9 @@ color: #05A371;
 }
 
 input[type="text"]{
-    
+
+    width: 200px;
+    height: 50px;
+    padding: 3px;
+    border: 5px grey;
 }
