--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@
     color: var(--secondary-color);
     font-weight: bold;
     margin-top: 100px;
-   // margin-left: 10px;
+    margin-left: 30px;
 }
 
 .Hosting:hover{
